// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render 1`] = `
<label
  class="input default"
>
  <input
    type="text"
    value="My value"
  />
</label>
`;

exports[`Input should render append container when onClearClick callback is provided 1`] = `
<label
  class="input default hasAppendIcon"
>
  <input
    type="text"
    value=""
  />
</label>
`;

exports[`Input should render append container with icon when onClearClick callback is provided and value is set 1`] = `
<label
  class="input default hasAppendIcon"
>
  <input
    type="text"
    value="test"
  />
  <div
    class="appendContainer"
  >
    <span
      aria-label="su-times"
      class="icon default su-times clickable"
      role="button"
      tabindex="0"
    />
  </div>
</label>
`;

exports[`Input should render collapsed 1`] = `
<label
  class="input default collapsed"
>
  <input
    type="text"
    value=""
  />
</label>
`;

exports[`Input should render null value as empty string 1`] = `
<label
  class="input default"
>
  <input
    type="text"
    value=""
  />
</label>
`;

exports[`Input should render with a loader 1`] = `
<label
  class="input default"
>
  <div
    class="prependedContainer default"
  >
    <div
      class="spinner"
      style="width:20px;height:20px"
    >
      <div
        class="doubleBounce1"
      />
      <div
        class="doubleBounce2"
      />
    </div>
  </div>
  <input
    type="text"
    value=""
  />
</label>
`;

exports[`Input should render with dark skin 1`] = `
<label
  class="input dark hasAppendIcon"
>
  <div
    class="prependedContainer dark"
  >
    <span
      aria-label="su-pen"
      class="icon dark su-pen"
    />
  </div>
  <input
    type="text"
    value=""
  />
</label>
`;

exports[`Input should render with icon 1`] = `
<label
  class="input default"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-pen"
      class="icon default su-pen"
    />
  </div>
  <input
    type="text"
    value="My value"
  />
</label>
`;

exports[`Input should render with invalid value 1`] = `
<label
  class="input default error"
>
  <input
    type="text"
    value="My value"
  />
</label>
`;

exports[`Input should render with placeholder 1`] = `
<label
  class="input default"
>
  <input
    placeholder="My placeholder"
    type="text"
    value="My value"
  />
</label>
`;

exports[`Input should render with type 1`] = `
<label
  class="input default"
>
  <input
    type="password"
    value="My value"
  />
</label>
`;

exports[`Input should render with type number with attributes 1`] = `
<label
  class="input default"
>
  <input
    max="50"
    min="10"
    step="5"
    type="number"
    value="25"
  />
</label>
`;

exports[`Input should render with value 1`] = `
<label
  class="input default"
>
  <input
    type="text"
    value="My value"
  />
</label>
`;
